Refs #9080; Moved getRequiredHead from skin to browser, now is possible to disable all kss & js

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 4.2-dev - (unreleased)
 ----------------------
+* Feature: modified getRequiredHead to have the possibility to disable all kss & js
+  [szabozo0 #5095]
 
 4.1 - (2011-11-18)
 ------------------
