--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,7 +3,8 @@
 
 4.5-dev - (unreleased)
 ----------------------
-
+* Bug fix: Quickfix for empty html tags
+  [szabozo0 refs #5358]
 4.4 - (2012-07-09)
 ------------------
 * Bug fix: fixed not closed tags on external templates
