Updated version for Products.EEATemplatesService to 5.0-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.0-dev - (unreleased)
+----------------------
+
 4.9 - (2013-11-20)
 ------------------
 * Bugfix: patch for losing css/js registry on submit after ac cookie expired
