--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.2.dev0 - (unreleased)
+-----------------------
+
 5.1 - (2015-07-09)
 ------------------
 * Bug fix: adjust responsive template
