--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.3.dev0 - (unreleased)
+-----------------------
+
 5.2 - (2015-07-28)
 ------------------
 * Fix: getRequestHead now is calleble via ajax
