--- a/trunk/Products.EEATemplatesService/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEATemplatesService/trunk/docs/HISTORY.txt
@@ -3,7 +3,7 @@ Changelog
 
 5.3.dev0 - (unreleased)
 -----------------------
-* Bugfix: set socket timeout to prevent Zope instances hanging out when the external service is not responding
+* Bugfix: set socket timeout to prevent Zope instances hanging out when the external service is not responding using eventlet
   [lucas refs #29063]
   
 5.2 - (2015-07-28)
