--- a/trunk/Products.EEATemplatesService/trunk/docs/HISTORY.txt
+++ b/trunk/Products.EEATemplatesService/trunk/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.4.dev0 - (unreleased)
+-----------------------
+
 5.3 - (2015-10-05)
 ------------------
 * Bugfix: set socket timeout to prevent Zope instances hanging out when the external service is not responding using eventlet
